--- a/app/views/shared/_form_profile.html.haml
+++ b/app/views/shared/_form_profile.html.haml
@@ -1,11 +1,18 @@
 = form_with(model: profile, url: profile_path, local: true) do |f|
+  - if @profile.errors.any?
+    .alert.alert-danger
+      %h4 エラーがあります。以下を修正してください。
+      %ul
+        - profile.errors.full_messages.each do |message|
+          %li= message
+
   .form-group
     = f.label :nickname, 'ニックネーム'
     = f.text_field :nickname, required: true, class: 'form-control'
 
   .form-group
     = f.label :age, '年齢'
-    = f.number_field :age, min: 0, class: 'form-control'
+    = f.number_field :age, min: 0, max: 100, class: 'form-control'
 
   .form-group
     = f.label :gender, '性別'
