--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,8 +1,9 @@
 .container
   %h2 プロフィール情報
+  = link_to 'ログアウト', destroy_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'ログアウトしますか？'}
   = link_to 'プロフィールを編集', edit_profile_path, class: 'btn edit'
-  
-  - if current_user.profile.avatar.attached?
+
+  - if current_user.profile&.avatar&.attached?
     = image_tag current_user.profile.avatar
   - else
     = image_tag 'default_avatar.png', class: 'icon'
