--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,29 +1,33 @@
-.container
-  %h2 プロフィール情報
-  = link_to 'ログアウト', destroy_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'ログアウトしますか？'}
-  = link_to 'プロフィールを編集', edit_profile_path, class: 'btn edit'
+= link_to 'ログアウト', destroy_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'ログアウトしますか？'}
 
-  - if current_user.profile&.avatar&.attached?
-    = image_tag current_user.profile.avatar
-  - else
-    = image_tag 'default_avatar.png', class: 'icon'
-  .profile-info
-    .profile-name
-      %p ニックネーム
-      = current_user.profile.nickname
-    %br
-    .profile-age
-      %p 年齢
-      = current_user.profile.age
-    %br
-    .profile-gender
-      %p 性別
-      = current_user.profile.gender
-    %br
-    .profile-region
-      %p 地域
-      = current_user.profile.region
-    %br
-    .profile-introduction
-      %p 自己紹介
-      = current_user.profile.introduction
+.container.profile
+  %h2.profile-heading プロフィール情報
+
+  .profile-content
+    .profile-avatar
+      - if current_user.profile&.avatar&.attached?
+        = image_tag current_user.profile.avatar, class: 'avatar-icon'
+      - else
+        = image_tag 'default_avatar.png', class: 'avatar-icon'
+      = link_to 'プロフィールを編集', edit_profile_path, class: 'btn edit'
+
+    .profile-details
+      .detail-item
+        %p.label ニックネーム
+        %p.value= current_user.profile.nickname
+
+      .detail-item
+        %p.label 年齢
+        %p.value= "#{current_user.profile.age} 歳"
+
+      .detail-item
+        %p.label 性別
+        %p.value= current_user.profile.gender
+
+      .detail-item
+        %p.label 地域
+        %p.value= current_user.profile.region
+
+      .detail-item
+        %p.label 自己紹介
+        %p.value= current_user.profile.introduction
