--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,15 @@
-.container.profile {
+@import 'variables';
+@import 'post';
+
+body {
+  background-color: #f7f3f3;
+}
+
+.container {
+  padding: 0 200px;
+}
+
+.profile-container {
     max-width: 800px;
     margin: 50px auto;
     padding: 20px;
