--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,14 +1,34 @@
+@import 'normalize';
 @import 'variables';
 @import 'post';
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+  line-height: 1.5;
+}
+
 body {
   background-color: #f7f3f3;
+  color: $text-color;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: $text-color;
+  text-decoration: none;
 }
 
 .container {
   padding: 0 200px;
 }
 
+
+// profileに関するcss
 .profile-container {
     max-width: 800px;
     margin: 50px auto;
@@ -113,6 +133,7 @@ body {
   border: 1px solid #9e9e9edb;
   border-radius: 30px;
 }
+
 
 // メッセージ表示
 .notice,
