--- a/app/assets/stylesheets/post.scss
+++ b/app/assets/stylesheets/post.scss
@@ -3,8 +3,6 @@
 .post {
   border: 1px solid $border-color;
   border-radius: 10px;
-  padding: 10px;
-  margin-bottom: 10px;
   background-color: #ffffff;
 
   &-header {
@@ -17,13 +15,11 @@
       gap: 0.5rem;
 
       .post-avatar-icon {
-        width: 40px;
         border: 1px solid $border-color;
         border-radius: 50%;
       }
 
       .user-name {
-        font-size: 14px;
         color: $text-color;
       }
     }
@@ -45,9 +41,34 @@
   }
 }
 
+// indexページ
+.post-index {
+  padding: 10px;
+  margin-bottom: 10px;
+
+  .post-avatar-icon {
+    width: 40px;
+  }
+
+  .user-name {
+    font-size: 14px;
+  }
+}
+
 .pencil-icon {
   position: fixed;
   bottom: 40px;
   right: 40px;
   z-index: 10;
+}
+
+// showページ
+.post-show {
+  max-width: 1000px;
+  margin: 20px auto;
+  padding: 30px;
+
+  .post-avatar-icon {
+    width: 60px;
+  }
 }
