--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -23,5 +23,5 @@
             = image_tag 'comment.png'
             0
 
-
-= image_tag 'pencil_icon.png', class: 'pencil-icon'
+= link_to new_post_path do
+  = image_tag 'pencil_icon.png', class: 'pencil-icon'
