--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,21 @@ a {
   padding: 0 200px;
 }
 
+.btn-primary {
+  width: 200px;
+  padding: 10px 20px;
+  color: #fff;
+  background-color: $primary-color;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  display: inline-block;
+  transition: all 0.5s ease;
+  cursor: pointer;
+
+    &:hover {
+      opacity: 0.7;
+    }
+}
 
 // profileに関するcss
 .profile-container {
