--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -8,6 +8,7 @@
           - else
             = image_tag 'default_avatar.png', class: 'post-avatar-icon'
         %span.user-name= @post.user.profile.nickname
+      = link_to '削除', post_path(@post), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' }
     .post-content
       %p= @post.content
     .post-actions
