コメント一覧を表示

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import 'normalize';
 @import 'variables';
 @import 'post';
+@import 'comment';
 
 *, *::before, *::after {
   box-sizing: border-box;
