--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -18,3 +18,11 @@
         = image_tag 'comment.png'
 
   .comments-section{ 'id' => 'post-comments', 'data-post-id' => @post.id }
+
+  .comment-form
+    .show-comment-button
+      コメントを追加
+    .comment-form-textarea.hidden
+      = text_area_tag :comment_content, nil, class: 'comment-textarea'
+      .add-comment-button
+        コメントを追加
