--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -5,7 +5,7 @@
 
   .profile-content
     .profile-avatar
-      = avatar_display(@profile, current_user)
+      = avatar_display(current_user)
       = link_to 'プロフィールを編集', edit_profile_path, class: 'btn edit'
 
     .profile-details
