いいね機能を追加

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -11,11 +11,14 @@
       = link_to '削除', post_path(@post), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' }
     .post-content
       %p= @post.content
-    .post-actions
-      %span.like
-        = image_tag 'like_inactive.png'
-      %span.comment
-        = image_tag 'comment.png'
+    .post-action
+      %span.like-button
+        - if current_user.likes.exists?(post_id: @post.id)
+          = image_tag 'like_active.png',class: 'like-image'
+        - else
+          = image_tag 'like_inactive.png',class: 'like-image'
+      %p.post-action-message 参考になったらいいねしてみよう！
+
 
   .comments-section{ 'id' => 'post-comments', 'data-post-id' => @post.id }
 
