--- a/app/assets/stylesheets/post.scss
+++ b/app/assets/stylesheets/post.scss
@@ -73,6 +73,21 @@
   }
 }
 
+.post-action {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+
+  .like-image {
+    width: 20px;
+  }
+
+  .post-action-message {
+    font-size: 12px;
+    color: $text-color;
+  }
+}
+
 // newページ
 .post-new {
   height: 400px;
