--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,8 @@
 @import 'normalize';
 @import 'variables';
-@import 'post';
 @import 'comment';
+@import 'post';
+@import 'profile';
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -44,108 +45,38 @@ a {
     }
 }
 
+.button-secondary {
+  width: 300px;
+  padding: 15px 20px;
+  color: $primary-color;
+  background-color: #fff;
+  border: 1px solid $primary-color;
+  border-radius: 5px;
+}
+
 .hidden {
   display: none;
 }
 
 
-// profileに関するcss
-.profile-container {
-    max-width: 800px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+// 以下確認
+.btn.logout {
+  display: block;
+  margin: 0 auto 20px;
+  padding: 8px 16px;
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 14px;
+  text-align: center;
+
+  &:hover {
+    background-color: #c82333;
   }
-
-  .profile-heading {
-    text-align: center;
-    font-size: 24px;
-    margin-bottom: 20px;
-    color: #333;
-  }
-
-  .profile-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .profile-avatar {
-    text-align: center;
-    margin-bottom: 20px;
-
-    .avatar-image {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 3px solid #ddd;
-      margin-bottom: 10px;
-
-      &.default {
-        border-color: #ccc;
-      }
-    }
-
-    .btn.edit {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 8px 16px;
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      text-decoration: none;
-      font-size: 14px;
-  
-      &:hover {
-        background-color: #0056b3;
-      }
-    }
-  }
-
-  .profile-details {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    width: 100%;
-
-    .detail-item {
-      display: flex;
-      flex-direction: column;
-
-      .label {
-        font-weight: bold;
-        color: #555;
-        margin-bottom: 5px;
-      }
-
-      .value {
-        font-size: 16px;
-        color: #333;
-      }
-    }
-  }
-
-  .btn.logout {
-    display: block;
-    margin: 0 auto 20px;
-    padding: 8px 16px;
-    background-color: #dc3545;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    font-size: 14px;
-    text-align: center;
-
-    &:hover {
-      background-color: #c82333;
-    }
-  }
+}
 
 
 // アバターのアイコン
