--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,30 +1,3 @@
 = link_to 'ログアウト', destroy_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'ログアウトしますか？'}
 
-.profile-container
-  %h2.profile-heading プロフィール情報
-
-  .profile-content
-    .profile-avatar
-      = avatar_display(current_user)
-      = link_to 'プロフィールを編集', edit_profile_path, class: 'btn edit'
-
-    .profile-details
-      .detail-item
-        %p.label ニックネーム
-        %p.value= current_user.profile.nickname
-
-      .detail-item
-        %p.label 年齢
-        %p.value= "#{current_user.profile.age} 歳"
-
-      .detail-item
-        %p.label 性別
-        %p.value= current_user.profile.gender
-
-      .detail-item
-        %p.label 地域
-        %p.value= current_user.profile.region
-
-      .detail-item
-        %p.label 自己紹介
-        %p.value= current_user.profile.introduction
+= render 'shared/user_show', user: current_user, link_label: 'プロフィールを編集', link_path: edit_profile_path
