--- a/app/views/shared/_user_show.html.haml
+++ b/app/views/shared/_user_show.html.haml
@@ -4,7 +4,7 @@
   .user-profile-content
     .user-profile-header
       .user-profile-avatar
-        = avatar_display(user)
+        = avatar_display(user, class_name: 'profile-avatar')
       .user-profile-info
         %h3= user.profile.nickname
         .user-profile-details
@@ -14,7 +14,6 @@
 
     - if link_label.present? && link_path.present?
       = link_to link_label, link_path, class: 'button-secondary'
-    -#   = link_to 'プロフィールを編集', edit_profile_path, class: 'button-secondary'
 
     .user-profile-introduction
       %p.user-profile-label 自己紹介
