--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,4 +5,4 @@
   .header-right
     = link_to "投稿一覧", '#', class: "header-nav-link"
     = link_to "プロフィール", '#', class: "header-nav-link"
-    = link_to "ログアウト", '#', class: "header-nav-link"
+    = login_logout_link
