--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,8 +1,8 @@
 %header.header
   .header-left
     %span= image_tag 'site_logo.png',class: 'header-site-logo'
-    = link_to "Familink", '#', class: "header-site-name"
+    %span.header-site-name Familink
   .header-right
-    = link_to "投稿一覧", '#', class: "header-nav-link"
-    = link_to "プロフィール", '#', class: "header-nav-link"
+    = link_to "投稿一覧", posts_path, class: "header-nav-link"
+    = link_to "プロフィール", profile_path, class: "header-nav-link"
     = login_logout_link
