--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,9 @@
-%h1 HOME
-
-= link_to 'プロフィール', profile_path
+.container
+  .home-page
+    .home-text-content
+      %h1.home-title 家族と家族がつながる輪
+      %p.home-subtitle 日々の子育てで感じる小さな悩みや、ちょっとした気づきを気軽に相談してみませんか？
+      %p.home-subtitle 家族同士がつながり、交流を通じて新しい発見や支えが見つかるサービスです。
+    = image_tag 'home_image.png', class: 'home-image'
+  .home-action
+    = link_to '新規登録はこちら', new_user_registration_path, class: 'button-signup'
