--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,7 +5,7 @@
         %h1.home-primary-title Familink
         %span.home-subtitle ~家族と家族がつながる輪~
       .home-description
-        %p.home-description-text 日々の子育てで感じる小さな悩みや、ちょっとした気づきを気軽に相談、共有してみませんか？
+        %p.home-description-text 日々の子育てで感じる小さな悩みやちょっとした気づきを気軽に相談、共有してみませんか？
         %p.home-description-text あなたの経験、知識が誰かの助けになります。
         %p.home-description-text 家族同士がつながり、交流を通じて新しい発見や支えが見つかるサービスです。
     = image_tag 'home_image.png', class: 'home-image'
