--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -1,1 +1,1 @@
-= render 'shared/user_show', user: @user, link_label: 'フォロー', link_path: '#'
+= render 'shared/user_show', user: @user, account_id: @user.id
