アンフォロー機能を追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,6 +56,13 @@ a {
   border-radius: 5px;
 }
 
+.button-follow,
+.button-unfollow {
+  display: inline-block;
+  width: 145px;
+  text-align: center;
+}
+
 .hidden {
   display: none;
 }
