フォローとアンフォローボタンのどちらかを表示

--- a/app/views/shared/_user_show.html.haml
+++ b/app/views/shared/_user_show.html.haml
@@ -15,8 +15,10 @@
     - if defined?(link_label) && link_label.present? && defined?(link_path) && link_path.present?
       = link_to link_label, link_path, class: 'button-secondary'
     - else
-      %span.button-secondary.button-follow{ data: { account_id: account_id } } フォロー
-      %span.button-secondary.button-unfollow{ data: { account_id: account_id } } アンフォロー
+      - if current_user.has_liked?(user)
+        %span.button-secondary.button-unfollow{ data: { account_id: account_id } } アンフォロー
+      - else
+        %span.button-secondary.button-follow{ data: { account_id: account_id } } フォロー
 
     .user-profile-introduction
       %p.user-profile-label 自己紹介
