プロフィール作成、編集画面のレイアウト

--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -1,3 +1,4 @@
-%h2 プロフィール作成
-
-= render 'shared/form_profile', profile: @profile
+.container
+  %h2.profile-heading プロフィール作成
+  .user-profile
+    = render 'shared/form_profile', profile: @profile
