--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -48,3 +48,44 @@
   border: 1px solid #9e9e9edb;
   border-radius: 30px;
 }
+
+// プロフィールのフォーム
+.forms {
+  padding: 30px;
+}
+
+.form-group {
+  margin-bottom: 30px;
+}
+
+.profile-heading {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.form-introduction-label {
+  display: block;
+  margin-bottom: 8px;
+}
+
+.form-introduction-area {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid $border-color;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s, box-shadow 0.3s;
+
+  &:focus {
+    border-color: $primary-color;
+    box-shadow: 0 0 5px $primary-color;
+    outline: none;
+  }
+}
+
+.button-profile {
+  width: 40%;
+  height: 50px;
+  display: block;
+  margin: 0 auto;
+}
