--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -1,3 +1,4 @@
-%h1 プロフィールを編集
-
-= render 'shared/form_profile', profile: @profile
+.container
+  %h2.profile-heading プロフィールを編集
+  .user-profile
+    = render 'shared/form_profile', profile: @profile
