新規登録、ログインページのレイアウト

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import 'normalize';
 @import 'variables';
 @import 'comment';
+@import 'devise';
 @import 'header';
 @import 'home';
 @import 'post';
