--- a/app/views/shared/_form_profile.html.haml
+++ b/app/views/shared/_form_profile.html.haml
@@ -30,4 +30,4 @@
       = f.text_area :introduction, rows: 5, class: 'form-control form-introduction-area'
 
     .form-group
-      = f.submit '送信', class: 'btn-primary button-profile'
+      = f.submit '登録', class: 'btn-primary button-profile'
