--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -9,7 +9,7 @@
             .avatar-image
               = avatar_display(post.user, class_name: 'post-avatar-icon')
             %span.user-name= post.user.profile.nickname
-          %span.post-timestamp= post.created_at
+          %span.post-timestamp= post.created_at.strftime('%Y-%m-%d')
         .post-content
           %p= post.content
 
