フラッシュメッセージと日本語化

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import 'variables';
 @import 'comment';
 @import 'devise';
+@import 'flash';
 @import 'header';
 @import 'home';
 @import 'post';
@@ -75,9 +76,6 @@ a {
   display: none;
 }
 
-
-
-// 以下確認
 .btn.logout {
   display: block;
   margin: 0 auto 20px;
@@ -93,34 +91,4 @@ a {
   &:hover {
     background-color: #c82333;
   }
-}
-
-
-// メッセージ表示
-.notice,
-.alert {
-  // position: absolute;
-  position: fixed;
-  top: 20px; /* 上から20pxの位置に表示 */
-  left: 50%;
-  transform: translateX(-50%); /* 真ん中に表示 */
-  padding: 10px 20px;
-  border-radius: 5px;
-  z-index: 1000; /* 他の要素の上に表示されるように */
-  width: auto;
-  max-width: 90%; /* 必要に応じて幅を調整 */
-  text-align: center;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 影をつけて浮かせた感じに */
-}
-
-.notice {
-  background-color: #dff0d8; /* 淡い緑 */
-  color: #3c763d;
-  border: 1px solid #3c763d;
-}
-
-.alert {
-  background-color: #f2dede; /* 淡い赤 */
-  color: #a94442;
-  border: 1px solid #a94442;
 }
