自分以外の投稿にコメントした時のみメールを送付

--- a/app/views/comment_mailer/add_comment.html.haml
+++ b/app/views/comment_mailer/add_comment.html.haml
@@ -1,4 +1,4 @@
-%p #{@user.profile.nickname}さんから、あなたの以下の投稿にコメントが追加されました。
-%p 以下のリンクから返信してください。
+%p #{@user.profile.nickname}さんがあなたの投稿にコメントしました。
+%p こちらのリンクから返信できます。
 
 = link_to 'コメントを確認する', Rails.application.routes.url_helpers.post_url(@post)
