--- a/app/views/shared/_form_profile.html.haml
+++ b/app/views/shared/_form_profile.html.haml
@@ -31,3 +31,5 @@
 
     .form-group
       = f.submit '登録', class: 'btn-primary button-profile'
+      = f.check_box :notify_email, class: 'check-box'
+      = f.label :notify_email, '自分の投稿にコメントが追加されたときにメールで通知する', class:'check-box-message'
