--- a/app/assets/stylesheets/post.scss
+++ b/app/assets/stylesheets/post.scss
@@ -4,6 +4,7 @@
   border: 1px solid $border-color;
   border-radius: 10px;
   background-color: #ffffff;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 
   &-header {
     display: flex;
