タイムラインページの作成

--- a/app/views/shared/_tabs.html.haml
+++ b/app/views/shared/_tabs.html.haml
@@ -1,5 +1,5 @@
 .tabs
   .tabs-item.active
-    最新の投稿
+    = link_to '最新の投稿', posts_path
   .tabs-item
-    注目度が高い投稿
+    = link_to '注目度が高い投稿', timeline_path
