--- a/app/assets/stylesheets/tabs.scss
+++ b/app/assets/stylesheets/tabs.scss
@@ -6,20 +6,25 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   align-items: center;
   margin-bottom: 30px;
-  height: 50px;
   font-size: 18px;
 
   &-item {
     padding: 16px 0px;
-    color: $text-color;
     background-color: #fff;
     width: 100%;
     text-align: center;
     cursor: pointer;
 
+    a {
+      display: block;
+    }
+
     &.active {
       background-color: $primary-color;
-      color: #fff;
+
+      a {
+        color: #fff;
+      }
     }
 
     &:hover {
