--- a/app/views/shared/_tabs.html.haml
+++ b/app/views/shared/_tabs.html.haml
@@ -2,4 +2,4 @@
   .tabs-item.active
     = link_to '最新の投稿', posts_path
   .tabs-item
-    = link_to '注目度が高い投稿', timeline_path
+    = link_to 'いいねした投稿', timeline_path
