--- a/app/assets/stylesheets/tabs.scss
+++ b/app/assets/stylesheets/tabs.scss
@@ -5,8 +5,9 @@
   justify-content: space-around;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   align-items: center;
-  margin-bottom: 30px;
+  margin: 50px auto 30px;
   font-size: 18px;
+  width: 1000px;
 
   &-item {
     padding: 16px 0px;
