--- a/app/assets/stylesheets/post.scss
+++ b/app/assets/stylesheets/post.scss
@@ -31,11 +31,6 @@
     }
   }
 
-  &-content {
-    color: $text-color;
-    margin-bottom: 2rem;
-  }
-
   &-actions {
     display: flex;
     gap: 2rem;
@@ -71,7 +66,7 @@
 // showページ
 .post-show {
   max-width: 1000px;
-  margin: 20px auto;
+  margin: 60px auto 20px;
   padding: 30px;
 
   .post-avatar-icon {
@@ -91,6 +86,29 @@
   .post-action-message {
     font-size: 12px;
     color: $text-color;
+  }
+}
+
+.post-content {
+  color: $text-color-sub;
+  margin-bottom: 10px;
+}
+
+.post-content-text {
+  border: solid 1px $border-color;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.delete-post {
+  padding: 10px;
+  color: $text-color-sub;
+
+  &:hover {
+    color: #fff;
+    background-color: $secondary-color;
+    transition: background-color 0.5s;
+    border-radius: 5px;
   }
 }
 
