--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -7,8 +7,12 @@
             = avatar_display(@post.user, class_name: 'post-avatar-icon')
         %span.user-name= @post.user.profile.nickname
       - if current_user == @post.user
-        = link_to '削除', post_path(@post), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' }
-    .post-content
+        %span= link_to '削除', post_path(@post), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' }, class: 'delete-post'
+    %p.post-title
+      %span.post-title-text タイトル：
+      = @post.title
+    .post-content 投稿内容
+    .post-content-text
       %p= @post.content
     .post-action
       %span.like-button
