--- a/app/views/shared/_posts.html.haml
+++ b/app/views/shared/_posts.html.haml
@@ -11,10 +11,9 @@
               = avatar_display(post.user, class_name: 'post-avatar-icon')
             %span.user-name= post.user.profile.nickname
           %span.post-timestamp= post.created_at.strftime('%Y-%m-%d')
-        .post-title
-          %p
-            %span.post-title-text タイトル：
-            = post.title
+        %p.post-title
+          %span.post-title-text タイトル：
+          = post.title
 
 = link_to new_post_path do
   = image_tag 'pencil_icon.png', class: 'pencil-icon'
