--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -14,6 +14,7 @@
         .post-form-title
           = f.text_field :title, class: 'post-form-text', placeholder: '投稿タイトルを入力してください'
         .post-form-content
-          = f.text_area :content, class: 'post-form-textarea', placeholder: '投稿内容を入力してください'
+          = f.text_area :content, maxlength: 100, class: 'post-form-textarea', placeholder: '投稿内容を入力してください'
+          %span#char-count 0 / 100
         .post-form-action
           = f.submit '投稿する', class: 'btn-primary post-btn'
