--- a/app/assets/stylesheets/tabs.scss
+++ b/app/assets/stylesheets/tabs.scss
@@ -5,7 +5,7 @@
   justify-content: space-around;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   align-items: center;
-  margin: 50px auto 30px;
+  margin: 30px auto;
   font-size: 18px;
   width: 1000px;
 
