--- a/app/views/shared/_posts.html.haml
+++ b/app/views/shared/_posts.html.haml
@@ -1,5 +1,10 @@
 .container
   %h2 投稿一覧
+  .category
+    %span.category-item.active 全ての投稿
+    %span.category-item お悩み相談
+    %span.category-item 日常の投稿
+    %span.category-item 友達づくり
 
   = render 'shared/tabs'
   - posts.each do |post|
