--- a/app/views/shared/_posts.html.haml
+++ b/app/views/shared/_posts.html.haml
@@ -15,6 +15,7 @@
             .avatar-image
               = avatar_display(post.user, class_name: 'post-avatar-icon')
             %span.user-name= post.user.profile.nickname
+            %span.post-category= post.category
           %span.post-timestamp= post.created_at.strftime('%Y-%m-%d')
         %p.post-title
           %span.post-title-text タイトル：
