友達づくりカテゴリーのみ表示

--- a/app/views/shared/_posts.html.haml
+++ b/app/views/shared/_posts.html.haml
@@ -4,7 +4,7 @@
     = link_to '全ての投稿', posts_path, class: 'category-item'
     = link_to 'お悩み相談', worries_path, class: 'category-item'
     = link_to '日常の投稿', dailies_path, class: 'category-item'
-    %span.category-item 友達づくり
+    = link_to '友達づくり', friends_path, class: 'category-item'
 
   = render 'shared/tabs'
   - posts.each do |post|
