--- a/app/views/shared/_user_show.html.haml
+++ b/app/views/shared/_user_show.html.haml
@@ -22,8 +22,8 @@
         %span.button-secondary.button-follow{ data: { account_id: account_id } } フォロー
         %span.button-secondary.button-unfollow.hidden{ data: { account_id: account_id } } アンフォロー
 
-    = link_to '#' do
-      %span.following-count 0
+    = link_to account_followings_path(user) do
+      %span.following-count= user.followings.count
       %span.following-text フォロー中
     = link_to '#' do
       %span.follower-count 0
