--- a/app/assets/stylesheets/follow.scss
+++ b/app/assets/stylesheets/follow.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-.following-list {
+.follow-list {
   max-width: 800px;
   margin: 50px auto;
   padding: 20px;
@@ -11,7 +11,7 @@
 }
 
 .follow-headline {
-  margin-left: 250px;
+  margin-left: 300px;
   margin-bottom: 50px;
 }
 
